Source/WebCore/platform/graphics/texmap/TextureMapperLayer.h
@@ -27,6 +27,10 @@
 #include "TextureMapperBackingStore.h"
 #include <wtf/WeakPtr.h>
 
+#if USE(COORDINATED_GRAPHICS)
+#include "NicosiaAnimatedBackingStoreClient.h"
+#endif
+
 namespace WebCore {
 
 class GraphicsLayer;
@@ -88,6 +92,9 @@ public:
     void setContentsLayer(TextureMapperPlatformLayer*);
     void setAnimations(const TextureMapperAnimations&);
     void setBackingStore(TextureMapperBackingStore*);
+#if USE(COORDINATED_GRAPHICS)
+    void setAnimatedBackingStoreClient(Nicosia::AnimatedBackingStoreClient*);
+#endif
 
     bool applyAnimationsRecursively(MonotonicTime);
     bool syncAnimations(MonotonicTime);
@@ -197,12 +204,19 @@ private:
     TextureMapper* m_textureMapper { nullptr };
     TextureMapperAnimations m_animations;
     uint32_t m_id { 0 };
+#if USE(COORDINATED_GRAPHICS)
+    RefPtr<Nicosia::AnimatedBackingStoreClient> m_animatedBackingStoreClient;
+#endif
 
     struct {
         TransformationMatrix localTransform;
-
         TransformationMatrix combined;
         TransformationMatrix combinedForChildren;
+#if USE(COORDINATED_GRAPHICS)
+        TransformationMatrix futureLocalTransform;
+        TransformationMatrix futureCombined;
+        TransformationMatrix futureCombinedForChildren;
+#endif
     } m_layerTransforms;
 };
 
